Added Spotify list

--- a/index.html
+++ b/index.html
@@ -93,8 +93,9 @@
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Music</h2>
-                    <p>Subheading for social links below</p>
-                    <p>Soundcloud embedded player goes here</p>
+                    <p>
+                      <iframe src="https://embed.spotify.com/?uri=spotify%3Auser%3A125932131%3Aplaylist%3A6Uc7F2feVHxLkpyGm8pL0M" width="800" height="380" frameborder="0" allowtransparency="true"></iframe>
+                    </p>
                     <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">icon 1</a>
                 </div>
             </div>
@@ -121,7 +122,8 @@
             </div>
         </div>
     </section>
-
+    <a>
+      </a href="" href=""
     <!-- Map Section -->
     <div id="map"></div>
 
