Test new social icon

--- a/index.html
+++ b/index.html
@@ -110,13 +110,10 @@
                 <p>blahbalbhalba contact info here and place a form to collect and submit</p>
                 <ul class="list-inline banner-social-buttons">
                     <li>
-                        <a href="https://twitter.com/niknasty" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name"></span></a>
-                    </li>
-                    <li>
                         <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name"></span></a>
                     </li>
                     <li>
-                        <a href="https://plus.google.com/+Startbootstrap/posts" class="btn btn-default btn-lg"><i class="fa fa-instragram-plus fa-fw"></i> <span class="network-name"></span></a>
+                        <a href="https://plus.google.com/+Startbootstrap/posts" class="btn btn-default btn-lg"><i class="fa fa-spotify" aria-hidden="true"></i> <span class="network-name"></span></a>
                     </li>
                 </ul>
             </div>
