--- a/index.html
+++ b/index.html
@@ -110,10 +110,13 @@
                 <p>blahbalbhalba contact info here and place a form to collect and submit</p>
                 <ul class="list-inline banner-social-buttons">
                     <li>
-                        <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name"></span></a>
+                        <a href="https://www.instagram.com/niknsty/" class="btn btn-default btn-lg"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i> <span class="network-name"></span></a>
                     </li>
                     <li>
-                        <a href="https://plus.google.com/+Startbootstrap/posts" class="btn btn-default btn-lg"><i class="fa fa-spotify" aria-hidden="true"></i> <span class="network-name"></span></a>
+                        <a href="https://open.spotify.com/user/125932131/" class="btn btn-default btn-lg"><i class="fa fa-spotify fa-2x" aria-hidden="true"></i> <span class="network-name"></span></a>
+                    </li>
+                    <li>
+                      <a href="https://soundcloud.com/niknastyofficial" class="btn btn-default btn-lg"><i class="fa fa-soundcloud fa-2x" aria-hidden="true"></i> <span class="network-name"></span></a>
                     </li>
                 </ul>
             </div>
